# analyzer-coder

./: .gitignore  AGENTS.md  README.md  pyproject.toml  skills-lock.json
.java_results/: 20260610-142844-677362-report.md  20260610-142845-243847-graph.mmd  20260610-142846-421395-obsidian.txt  20260610-142847-001599-index.txt  20260610-142847-540246-query.txt  20260610-142848-032622-query.txt  20260610-143035-770607-report.md  20260610-143037-860279-obsidian.txt  20260610-143038-456256-index.txt  20260610-143038-972428-query.txt  20260610-143039-525946-query.txt
.java_ts_projects/: projects.json
docs/: enterprise-ai-knowledge-system.md  knowledge-asset-product-requirements.md  project-overview.md  user-registration.md
examples/: Sample.java
java/: README.md  pom.xml
shell/: start-dev-backend.cmd  start-dev-frontend.cmd
shell/start/: .env  docker-compose.yml  restart.sh  start.sh  stop.sh
src/java_analyzer/: __init__.py  analyzer.py  api_mapper.py  call_graph.py  chunker.py  cli.py  embedding.py  kb_loader.py  models.py  sql_flow.py  vector_store.py
src/java_ts_analyzer/: __init__.py  analyzer.py  api_mapper.py  call_graph.py  chunker.py  cli.py  embedding.py  kb_loader.py  models.py  sql_flow.py  vector_store.py
src/tests/: test_analyzer.py  test_cli.py  test_external_stores.py  test_rag.py  test_vectorization.py  test_web_backend.py
tests/: test_cli.py  test_vectorization.py  test_web_backend.py
web/backend/: __init__.py  analysis_records.py  app.py  config.py  errors.py  external_stores.py  fusion.py  knowledge_defaults.py  mysql_state.py  paths.py  (+5 more)
(+116 files in other folders)
