[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "java-ts-analyzer"
version = "0.1.0"
description = "Analyze Java source code with Python and tree-sitter."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tree-sitter>=0.25",
    "tree-sitter-java>=0.23",
]

[project.optional-dependencies]
semantic = [
    "sentence-transformers>=3.0",
]
web = [
    "flask>=3.0",
    "pymysql>=1.1",
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
java-ts-analyze = "java_ts_analyzer.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
